# commenthub

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
app/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_commentattachment.py  0003_alter_commentattachment_file.py  0004_alter_user_email.py
app/templates/emails/: reply_notification.html
backend/: pyproject.toml
backend/app/comments/: admin.py  app.py  consumers.py  exceptions.py  models.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/app/comments/migrations/: 0001_initial.py
backend/app/core/: app.py  middleware.py
backend/app/graphql/: mutations.py  schema.py  types.py
backend/app/users/: apps.py  serializers.py  urls.py  views.py
backend/app/users/migrations/: 0001_initial.py
backend/config/: asgi.py  celery.py  settings.py  test_settings.py  urls.py
backend/templates/emails/: reply_notification.txt
backend/tests/: tests.py
comments_api/: asgi.py  celery.py  celery_settings.py  settings.py  urls.py  wsgi.py
vue_ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
vue_ui/src/: App.vue  main.ts
vue_ui/src/api/: apollo.ts  auth.ts  comments.ts  files.ts
vue_ui/src/components/: CommentForm.vue  CommentItem.vue  Header.vue  LoginForm.vue  ReCaptcha.vue  RegistrationForm.vue
vue_ui/src/config/: captcha.ts
(+14 files in other folders)
